<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aamonisasi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.example.aamonisasi.ui.riwayat.RiwayatFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_jadwal"
        android:name="com.example.aamonisasi.ui.jadwal.JadwalFragment"
        android:label="@string/title_jadwal"
        tools:layout="@layout/fragment_jadwal" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.aamonisasi.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />

    <activity
        android:id="@+id/navigation_login"
        android:name="com.example.aamonisasi.LoginActivity"
        android:label="@string/title_login"
        tools:layout="@layout/activity_login" />

    <activity
        android:id="@+id/navigation_register"
        android:name="com.example.aamonisasi.RegisterActivity"
        android:label="@string/title_register"
        tools:layout="@layout/activity_register" />
</navigation>