<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_home"
        android:layout_width="413dp"
        android:layout_height="154dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/header_background"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:text="@string/home"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:text="@string/home1"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rectangle_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_home">

            <EditText
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/cari_info"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/search_icon_background"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_search_24" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_home"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-37dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/kategori_background"
            android:padding="50dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:id="@+id/layoutbayi"
                android:layout_width="76dp"
                android:layout_height="109dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="76dp"
                    android:layout_gravity="left"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:src="@drawable/bayi" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="32dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="76dp"
                    android:gravity="center"
                    android:text="@string/bayi"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/layoutbayi"
                    tools:layout_editor_absoluteY="66dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutibu"
                android:layout_width="80dp"
                android:layout_height="126dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="136dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="76dp"
                    android:layout_gravity="left"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:src="@drawable/ibu" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="45dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="68dp"
                    android:gravity="center"
                    android:text="@string/ibu"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/layoutibu"
                    tools:layout_editor_absoluteY="160dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutsuntik"
                android:layout_width="85dp"
                android:layout_height="112dp"
                android:layout_marginStart="112dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:src="@drawable/suntik" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="34dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="68dp"
                    android:gravity="center"
                    android:text="@string/suntik"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/layoutsuntik"
                    tools:layout_editor_absoluteY="160dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutobat"
                android:layout_width="85dp"
                android:layout_height="112dp"
                android:layout_marginStart="112dp"
                android:layout_marginTop="144dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="80dp"
                    android:layout_gravity="left"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:src="@drawable/obat" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="34dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="68dp"
                    android:gravity="center"
                    android:text="@string/obat"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/layoutobat"
                    tools:layout_editor_absoluteY="160dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutsusu"
                android:layout_width="87dp"
                android:layout_height="120dp"
                android:layout_marginStart="224dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="right"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:src="@drawable/susu" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="34dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="68dp"
                    android:gravity="center"
                    android:text="@string/susu"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/layoutsusu"
                    tools:layout_editor_absoluteY="160dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutdiagram"
                android:layout_width="85dp"
                android:layout_height="112dp"
                android:layout_marginStart="240dp"
                android:layout_marginTop="136dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="80dp"
                    android:layout_gravity="left"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/app_name"
                    android:padding="0dp"
                    android:src="@drawable/diagram" />

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="34dp"
                    android:layout_gravity="left"
                    android:layout_marginEnd="68dp"
                    android:gravity="center"
                    android:text="@string/diagram"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@+id/layoutdiagram"
                    tools:layout_editor_absoluteY="160dp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="296dp"
                android:background="@drawable/pengumuman_background"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="102dp">


                <LinearLayout
                    android:id="@+id/layoutpengumuman1"
                    android:layout_width="129dp"
                    android:layout_height="104dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="0dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_margin="0dp"
                        android:contentDescription="@string/app_name"
                        android:padding="0dp"
                        android:src="@drawable/pengumuman1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutpengumuman"
                    android:layout_width="158dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="136dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="0dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="158dp"
                        android:layout_height="82dp"
                        android:layout_gravity="left"
                        android:layout_margin="0dp"
                        android:contentDescription="@string/app_name"
                        android:padding="0dp"
                        android:src="@drawable/pengumuman2"
                        tools:layout_editor_absoluteX="137dp"
                        tools:layout_editor_absoluteY="12dp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>